Win32 port: Add a sio driver for a pipe interface

--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1471,6 +1471,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\sio.c"
+				>
+			</File>
+			<File
 				RelativePath="..\sys_arch.c"
 				>
 			</File>
