Replaced spaces with underscores in msvc8 project files (unfortunately, the savannah cvs server doesn't support the command 'rename', so I had to delete the old files and add them renamed)

--- a/ports/win32/msvc8/lwIP_Test.vcproj
+++ b/ports/win32/msvc8/lwIP_Test.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="8,00"
-	Name="lwIP test"
+	Name="lwIP_test"
 	ProjectGUID="{8CC0CE51-32CF-4585-BFAF-A9343BC5A96D}"
-	RootNamespace="lwIP test"
+	RootNamespace="lwIP_test"
 	>
 	<Platforms>
 		<Platform
