contrib/apps/rtp: add a rtp sample to be able to test lwip's multicast features.

--- a/ports/win32/msvc8/lwIP_Test.vcproj
+++ b/ports/win32/msvc8/lwIP_Test.vcproj
@@ -272,6 +272,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\apps\rtp\rtp.c"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\apps\sntp\sntp.c"
 					>
 				</File>
