--- a/ports/win32/lwipcfg_msvc.h.example
+++ b/ports/win32/lwipcfg_msvc.h.example
@@ -6,3 +6,13 @@
 #define LWIP_PORT_INIT_IPADDR(addr)   IP4_ADDR((addr), 192,168,1,200)
 #define LWIP_PORT_INIT_GW(addr)       IP4_ADDR((addr), 192,168,1,1)
 #define LWIP_PORT_INIT_NETMASK(addr)  IP4_ADDR((addr), 255,255,255,0)
+
+/* configuration for applications */
+
+#define LWIP_DNS_APP                  0
+#define LWIP_PING_APP                 0
+#define LWIP_NETBIOS_APP              0
+#define LWIP_HTTPD_APP                0
+#define LWIP_NETIO_APP                0
+#define LWIP_RTP_APP                  0
+#define LWIP_SNTP_APP                 0
