--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="9,00"
 	Name="lwIP"
 	ProjectGUID="{2CC276FA-B226-49C9-8F82-7FCD5A228E28}"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
