--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -454,6 +454,10 @@
 				Name="core"
 				>
 				<File
+					RelativePath="$(LWIP_DIR)\src\core\def.c"
+					>
+				</File>
+				<File
 					RelativePath="$(LWIP_DIR)\src\core\dhcp.c"
 					>
 				</File>
