added netif/ppp_oe.h and netif/slipif.h

--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1082,6 +1082,14 @@
 						RelativePath="$(LWIP_DIR)\src\include\netif\loopif.h"
 						>
 					</File>
+					<File
+						RelativePath="$(LWIP_DIR)\src\include\netif\ppp_oe.h"
+						>
+					</File>
+					<File
+						RelativePath="$(LWIP_DIR)\src\include\netif\slipif.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
