--- a/ports/win32/msvc8/lwIP_Test.vcproj
+++ b/ports/win32/msvc8/lwIP_Test.vcproj
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="8,00"
+	Version="9,00"
 	Name="lwIP_test"
 	ProjectGUID="{8CC0CE51-32CF-4585-BFAF-A9343BC5A96D}"
 	RootNamespace="lwIP_test"
+	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -78,6 +79,8 @@
 				AdditionalLibraryDirectories="$(PCAP_DIR)\Lib"
 				ProgramDatabaseFile=".\Release/test.pdb"
 				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -165,6 +168,8 @@
 				AdditionalLibraryDirectories="$(PCAP_DIR)\Lib"
 				GenerateDebugInformation="true"
 				SubSystem="1"
+				RandomizedBaseAddress="1"
+				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -335,6 +340,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\apps\sntp\sntp.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\apps\socket_examples\socket_examples.c"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\apps\socket_examples\socket_examples.h"
 					>
 				</File>
 				<File
