--- a/ports/win32/lwipcfg_msvc.h.example
+++ b/ports/win32/lwipcfg_msvc.h.example
@@ -12,6 +12,8 @@
 /** Define this to the GUID of the windows network adapter to use
  * or NOT define this if you want PACKET_LIB_ADAPTER_NR to be used */ 
 /*#define PACKET_LIB_ADAPTER_GUID       "00000000-0000-0000-0000-000000000000"*/
+/*#define PACKET_LIB_GET_ADAPTER_NETADDRESS(addr) IP4_ADDR((addr), 192,168,1,0)*/
+/*#define PACKET_LIB_QUIET*/
 
 #define LWIP_PORT_INIT_IPADDR(addr)   IP4_ADDR((addr), 192,168,1,200)
 #define LWIP_PORT_INIT_GW(addr)       IP4_ADDR((addr), 192,168,1,1)
