--- a/ports/win32/msvc8/lwIP_Test.vcproj
+++ b/ports/win32/msvc8/lwIP_Test.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Packet.lib"
+				AdditionalDependencies="Packet.lib wpcap.lib"
 				OutputFile=".\Release/test.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -97,6 +97,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -158,7 +161,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Packet.lib"
+				AdditionalDependencies="Packet.lib wpcap.lib"
 				OutputFile=".\Debug/test.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
@@ -184,6 +187,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
