--- a/ports/win32/msvc8/lwIP_pktif.vcproj
+++ b/ports/win32/msvc8/lwIP_pktif.vcproj
@@ -168,6 +168,31 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
+				RelativePath="..\pcap_helper.c"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="0"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions=""
+						BasicRuntimeChecks="3"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						Optimization="2"
+						AdditionalIncludeDirectories=""
+						PreprocessorDefinitions=""
+					/>
+				</FileConfiguration>
+			</File>
+			<File
 				RelativePath="..\pktdrv.c"
 				>
 				<FileConfiguration
@@ -221,6 +246,10 @@
 		<Filter
 			Name="Header Files"
 			>
+			<File
+				RelativePath="..\pcap_helper.h"
+				>
+			</File>
 			<File
 				RelativePath="..\pktdrv.h"
 				>
