Moved lwipopts.h to include subdir, updated ignore lists

--- a/ports/win32/msvc8/lwIP.vcproj
+++ b/ports/win32/msvc8/lwIP.vcproj
@@ -1457,11 +1457,11 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath="..\lwipopts.h"
+				RelativePath="..\lwippools.h"
 				>
 			</File>
 			<File
-				RelativePath="..\lwippools.h"
+				RelativePath="..\include\lwipopts.h"
 				>
 			</File>
 			<File
